--- a/plotjuggler_app/mainwindow.ui
+++ b/plotjuggler_app/mainwindow.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>825</width>
-    <height>720</height>
+    <width>1058</width>
+    <height>830</height>
    </rect>
   </property>
   <property name="focusPolicy">
@@ -23,7 +23,10 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QHBoxLayout" name="horizontalLayout_12">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0,0">
+    <property name="spacing">
+     <number>2</number>
+    </property>
     <property name="leftMargin">
      <number>0</number>
     </property>
@@ -186,7 +189,7 @@
             <number>4</number>
            </property>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,1,0">
+            <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,1,0,0">
              <item>
               <widget class="QLabel" name="label_4">
                <property name="text">
@@ -195,7 +198,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButtonLoadDatafile">
+              <widget class="QPushButton" name="buttonLoadDatafile">
                <property name="minimumSize">
                 <size>
                  <width>26</width>
@@ -240,6 +243,32 @@
                 </size>
                </property>
               </spacer>
+             </item>
+             <item>
+              <widget class="QPushButton" name="buttonReloadData">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;Quick Reload&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Reload the last file, keeping exactly the same configuration.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
+               <property name="text">
+                <string/>
+               </property>
+               <property name="icon">
+                <iconset resource="resource.qrc">
+                 <normaloff>:/resources/svg/reload.svg</normaloff>:/resources/svg/reload.svg</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>22</width>
+                 <height>22</height>
+                </size>
+               </property>
+               <property name="flat">
+                <bool>true</bool>
+               </property>
+              </widget>
              </item>
              <item>
               <widget class="QPushButton" name="buttonRecentData">
@@ -310,7 +339,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButtonLoadLayout">
+              <widget class="QPushButton" name="buttonLoadLayout">
                <property name="minimumSize">
                 <size>
                  <width>26</width>
@@ -344,7 +373,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButtonSaveLayout">
+              <widget class="QPushButton" name="buttonSaveLayout">
                <property name="minimumSize">
                 <size>
                  <width>26</width>
@@ -1121,7 +1150,7 @@
                 </spacer>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonZoomOut">
+                <widget class="QPushButton" name="buttonZoomOut">
                  <property name="minimumSize">
                   <size>
                    <width>28</width>
@@ -1155,7 +1184,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonTimeTracker">
+                <widget class="QPushButton" name="buttonTimeTracker">
                  <property name="minimumSize">
                   <size>
                    <width>28</width>
@@ -1196,7 +1225,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonLegend">
+                <widget class="QPushButton" name="buttonLegend">
                  <property name="minimumSize">
                   <size>
                    <width>28</width>
@@ -1230,7 +1259,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonUseDateTime">
+                <widget class="QPushButton" name="buttonUseDateTime">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
@@ -1277,7 +1306,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonActivateGrid">
+                <widget class="QPushButton" name="buttonActivateGrid">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                    <horstretch>0</horstretch>
@@ -1327,7 +1356,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonLink">
+                <widget class="QPushButton" name="buttonLink">
                  <property name="minimumSize">
                   <size>
                    <width>28</width>
@@ -1367,7 +1396,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonRemoveTimeOffset">
+                <widget class="QPushButton" name="buttonRemoveTimeOffset">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
@@ -1417,7 +1446,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonRatio">
+                <widget class="QPushButton" name="buttonRatio">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
                    <horstretch>0</horstretch>
@@ -1593,7 +1622,7 @@
                    </widget>
                   </item>
                   <item>
-                   <widget class="QPushButton" name="pushButtonPlay">
+                   <widget class="QPushButton" name="buttonPlay">
                     <property name="minimumSize">
                      <size>
                       <width>28</width>
@@ -1822,6 +1851,92 @@
       </widget>
      </widget>
     </item>
+    <item>
+     <widget class="Line" name="line_2">
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QWidget" name="widgetStatusBar" native="true">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 252, 152);</string>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_12">
+       <property name="spacing">
+        <number>12</number>
+       </property>
+       <property name="topMargin">
+        <number>2</number>
+       </property>
+       <property name="rightMargin">
+        <number>2</number>
+       </property>
+       <property name="bottomMargin">
+        <number>2</number>
+       </property>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QLabel" name="statusLabel">
+         <property name="minimumSize">
+          <size>
+           <width>100</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="textFormat">
+          <enum>Qt::RichText</enum>
+         </property>
+         <property name="openExternalLinks">
+          <bool>true</bool>
+         </property>
+         <property name="textInteractionFlags">
+          <set>Qt::TextBrowserInteraction</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="buttonCloseStatus">
+         <property name="maximumSize">
+          <size>
+           <width>22</width>
+           <height>22</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="resource.qrc">
+           <normaloff>:/resources/svg/close-button.svg</normaloff>:/resources/svg/close-button.svg</iconset>
+         </property>
+         <property name="flat">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="MenuBar" name="menuBar">
@@ -1829,7 +1944,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>825</width>
+     <width>1058</width>
      <height>26</height>
     </rect>
    </property>
