--- a/plotjuggler_app/mainwindow.ui
+++ b/plotjuggler_app/mainwindow.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>822</width>
-    <height>720</height>
+    <width>1058</width>
+    <height>830</height>
    </rect>
   </property>
   <property name="focusPolicy">
@@ -23,7 +23,10 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QHBoxLayout" name="horizontalLayout_12">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0,0">
+    <property name="spacing">
+     <number>2</number>
+    </property>
     <property name="leftMargin">
      <number>0</number>
     </property>
@@ -147,7 +150,6 @@
              <property name="font">
               <font>
                <pointsize>9</pointsize>
-               <weight>50</weight>
                <bold>false</bold>
               </font>
              </property>
@@ -187,7 +189,7 @@
             <number>4</number>
            </property>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,1,0">
+            <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,1,0,0">
              <item>
               <widget class="QLabel" name="label_4">
                <property name="text">
@@ -196,7 +198,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButtonLoadDatafile">
+              <widget class="QPushButton" name="buttonLoadDatafile">
                <property name="minimumSize">
                 <size>
                  <width>26</width>
@@ -243,6 +245,32 @@
               </spacer>
              </item>
              <item>
+              <widget class="QPushButton" name="buttonReloadData">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;Quick Reload&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Reload the last file, keeping exactly the same configuration.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
+               <property name="text">
+                <string/>
+               </property>
+               <property name="icon">
+                <iconset resource="resource.qrc">
+                 <normaloff>:/resources/svg/reload.svg</normaloff>:/resources/svg/reload.svg</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>22</width>
+                 <height>22</height>
+                </size>
+               </property>
+               <property name="flat">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
               <widget class="QPushButton" name="buttonRecentData">
                <property name="minimumSize">
                 <size>
@@ -276,6 +304,29 @@
             </layout>
            </item>
            <item>
+            <widget class="QCheckBox" name="checkBoxAddPrefixAndMerge">
+             <property name="focusPolicy">
+              <enum>Qt::NoFocus</enum>
+             </property>
+             <property name="toolTip">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Useful when comparing 2 or more files containing the same timeseries.&lt;br/&gt;&lt;br/&gt;You will be asked to add a prefix to the name of the timeseries, and you will &lt;span style=&quot; font-weight:700;&quot;&gt;not&lt;/span&gt; remove previously loaded data.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+             <property name="text">
+              <string>Add prefix and merge</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="Line" name="line">
+             <property name="frameShadow">
+              <enum>QFrame::Plain</enum>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
             <layout class="QHBoxLayout" name="horizontalLayout_11">
              <property name="topMargin">
               <number>10</number>
@@ -288,7 +339,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButtonLoadLayout">
+              <widget class="QPushButton" name="buttonLoadLayout">
                <property name="minimumSize">
                 <size>
                  <width>26</width>
@@ -322,7 +373,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButtonSaveLayout">
+              <widget class="QPushButton" name="buttonSaveLayout">
                <property name="minimumSize">
                 <size>
                  <width>26</width>
@@ -481,7 +532,6 @@
              <property name="font">
               <font>
                <pointsize>9</pointsize>
-               <weight>50</weight>
                <bold>false</bold>
               </font>
              </property>
@@ -892,7 +942,6 @@
              <property name="font">
               <font>
                <pointsize>9</pointsize>
-               <weight>50</weight>
                <bold>false</bold>
               </font>
              </property>
@@ -1101,7 +1150,7 @@
                 </spacer>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonZoomOut">
+                <widget class="QPushButton" name="buttonZoomOut">
                  <property name="minimumSize">
                   <size>
                    <width>28</width>
@@ -1135,7 +1184,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonTimeTracker">
+                <widget class="QPushButton" name="buttonTimeTracker">
                  <property name="minimumSize">
                   <size>
                    <width>28</width>
@@ -1161,7 +1210,7 @@
                   <string>tt</string>
                  </property>
                  <property name="icon">
-                  <iconset>
+                  <iconset resource="resource.qrc">
                    <normaloff>:/style_light/line_tracker_1.png</normaloff>:/style_light/line_tracker_1.png</iconset>
                  </property>
                  <property name="iconSize">
@@ -1176,7 +1225,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonLegend">
+                <widget class="QPushButton" name="buttonLegend">
                  <property name="minimumSize">
                   <size>
                    <width>28</width>
@@ -1210,7 +1259,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonUseDateTime">
+                <widget class="QPushButton" name="buttonUseDateTime">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
@@ -1257,7 +1306,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonActivateGrid">
+                <widget class="QPushButton" name="buttonActivateGrid">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                    <horstretch>0</horstretch>
@@ -1307,7 +1356,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonLink">
+                <widget class="QPushButton" name="buttonLink">
                  <property name="minimumSize">
                   <size>
                    <width>28</width>
@@ -1347,7 +1396,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonRemoveTimeOffset">
+                <widget class="QPushButton" name="buttonRemoveTimeOffset">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
@@ -1376,7 +1425,7 @@
                   <string/>
                  </property>
                  <property name="icon">
-                  <iconset>
+                  <iconset resource="resource.qrc">
                    <normaloff>:/resources/svg/t0.svg</normaloff>:/resources/svg/t0.svg</iconset>
                  </property>
                  <property name="iconSize">
@@ -1397,7 +1446,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButtonRatio">
+                <widget class="QPushButton" name="buttonRatio">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
                    <horstretch>0</horstretch>
@@ -1426,7 +1475,7 @@
                   <string/>
                  </property>
                  <property name="icon">
-                  <iconset>
+                  <iconset resource="resource.qrc">
                    <normaloff>:/resources/svg/ratio.svg</normaloff>:/resources/svg/ratio.svg</iconset>
                  </property>
                  <property name="iconSize">
@@ -1573,7 +1622,7 @@
                    </widget>
                   </item>
                   <item>
-                   <widget class="QPushButton" name="pushButtonPlay">
+                   <widget class="QPushButton" name="buttonPlay">
                     <property name="minimumSize">
                      <size>
                       <width>28</width>
@@ -1702,7 +1751,6 @@
                    <widget class="QLabel" name="label">
                     <property name="font">
                      <font>
-                      <weight>75</weight>
                       <bold>true</bold>
                      </font>
                     </property>
@@ -1752,7 +1800,6 @@
                    <widget class="QLabel" name="label_2">
                     <property name="font">
                      <font>
-                      <weight>75</weight>
                       <bold>true</bold>
                      </font>
                     </property>
@@ -1804,6 +1851,92 @@
       </widget>
      </widget>
     </item>
+    <item>
+     <widget class="Line" name="line_2">
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QWidget" name="widgetStatusBar" native="true">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 252, 152);</string>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_12">
+       <property name="spacing">
+        <number>12</number>
+       </property>
+       <property name="topMargin">
+        <number>2</number>
+       </property>
+       <property name="rightMargin">
+        <number>2</number>
+       </property>
+       <property name="bottomMargin">
+        <number>2</number>
+       </property>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QLabel" name="statusLabel">
+         <property name="minimumSize">
+          <size>
+           <width>100</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="textFormat">
+          <enum>Qt::RichText</enum>
+         </property>
+         <property name="openExternalLinks">
+          <bool>true</bool>
+         </property>
+         <property name="textInteractionFlags">
+          <set>Qt::TextBrowserInteraction</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="buttonCloseStatus">
+         <property name="maximumSize">
+          <size>
+           <width>22</width>
+           <height>22</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="resource.qrc">
+           <normaloff>:/resources/svg/close-button.svg</normaloff>:/resources/svg/close-button.svg</iconset>
+         </property>
+         <property name="flat">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="MenuBar" name="menuBar">
@@ -1811,7 +1944,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>822</width>
+     <width>1058</width>
      <height>26</height>
     </rect>
    </property>
@@ -1887,7 +2020,7 @@
   </action>
   <action name="actionReportBug">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/resources/github.png</normaloff>:/resources/github.png</iconset>
    </property>
    <property name="text">
@@ -1948,7 +2081,7 @@
   </action>
   <action name="actionShare_the_love">
    <property name="icon">
-    <iconset>
+    <iconset resource="resource.qrc">
      <normaloff>:/resources/twitter.png</normaloff>:/resources/twitter.png</iconset>
    </property>
    <property name="text">
@@ -1979,6 +2112,8 @@
    <header location="global">menubar.h</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
