Imported upstream version '3.14.1' of 'upstream'

--- a/plotjuggler_app/plotwidget_editor.ui
+++ b/plotjuggler_app/plotwidget_editor.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>955</width>
-    <height>657</height>
+    <width>900</width>
+    <height>700</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>900</width>
-    <height>0</height>
+    <height>700</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -233,7 +233,7 @@
         <property name="minimumSize">
          <size>
           <width>200</width>
-          <height>250</height>
+          <height>350</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -267,7 +267,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Lines Style:</string>
+            <string>Override Lines Style:</string>
            </property>
           </widget>
          </item>
@@ -276,13 +276,13 @@
            <property name="minimumSize">
             <size>
              <width>200</width>
-             <height>0</height>
+             <height>170</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>400</width>
-             <height>200</height>
+             <height>170</height>
             </size>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -302,12 +302,19 @@
              <number>0</number>
             </property>
             <item>
-             <widget class="QRadioButton" name="radioLines">
+             <widget class="QRadioButton" name="radioDefault">
+              <property name="font">
+               <font>
+                <weight>50</weight>
+                <italic>false</italic>
+                <bold>false</bold>
+               </font>
+              </property>
               <property name="focusPolicy">
                <enum>Qt::NoFocus</enum>
               </property>
               <property name="text">
-               <string>Lines</string>
+               <string>Lines (default)</string>
               </property>
               <property name="checked">
                <bool>true</bool>
@@ -336,13 +343,19 @@
             </item>
             <item>
              <widget class="QRadioButton" name="radioSticks">
+              <property name="focusPolicy">
+               <enum>Qt::NoFocus</enum>
+              </property>
               <property name="text">
                <string>Sticks</string>
               </property>
              </widget>
             </item>
-             <item>
+            <item>
              <widget class="QRadioButton" name="radioSteps">
+              <property name="focusPolicy">
+               <enum>Qt::NoFocus</enum>
+              </property>
               <property name="text">
                <string>Steps (pre)</string>
               </property>
@@ -350,10 +363,26 @@
             </item>
             <item>
              <widget class="QRadioButton" name="radioStepsInv">
+              <property name="focusPolicy">
+               <enum>Qt::NoFocus</enum>
+              </property>
               <property name="text">
                <string>Step (post)</string>
               </property>
              </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_3">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </widget>
