--- a/plotjuggler_app/curvelist_panel.ui
+++ b/plotjuggler_app/curvelist_panel.ui
@@ -64,8 +64,8 @@
            <widget class="QLineEdit" name="lineEditFilter">
             <property name="minimumSize">
              <size>
-              <width>100</width>
-              <height>30</height>
+              <width>0</width>
+              <height>25</height>
              </size>
             </property>
             <property name="maximumSize">
@@ -78,7 +78,7 @@
              <enum>Qt::ClickFocus</enum>
             </property>
             <property name="toolTip">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Search box...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Search box.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Display only series that contain these strings.&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Example&lt;/span&gt;:&lt;/p&gt;&lt;p&gt;Filter: &amp;quot;&lt;span style=&quot; font-weight:600;&quot;&gt;mot pos&lt;/span&gt;&amp;quot;&lt;br/&gt;matching with: &amp;quot;/&lt;span style=&quot; font-weight:600;&quot;&gt;mot&lt;/span&gt;or/&lt;span style=&quot; font-weight:600;&quot;&gt;pos&lt;/span&gt;ition&amp;quot;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="styleSheet">
              <string notr="true"/>
@@ -100,7 +100,7 @@
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,1,0">
             <property name="topMargin">
-             <number>8</number>
+             <number>0</number>
             </property>
             <property name="bottomMargin">
              <number>8</number>
@@ -173,12 +173,37 @@
          </layout>
         </widget>
         <widget class="QWidget" name="layoutWidget1">
-         <layout class="QVBoxLayout" name="verticalLayoutBottom" stretch="0,1">
+         <layout class="QVBoxLayout" name="verticalLayoutBottom" stretch="0,0,1">
           <property name="topMargin">
            <number>6</number>
           </property>
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0,1">
+           <widget class="QLineEdit" name="lineEditCustomFilter">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>25</height>
+             </size>
+            </property>
+            <property name="toolTip">
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Search box to Custom Series&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            </property>
+            <property name="inputMask">
+             <string notr="true"/>
+            </property>
+            <property name="frame">
+             <bool>false</bool>
+            </property>
+            <property name="placeholderText">
+             <string>Filter...</string>
+            </property>
+            <property name="clearButtonEnabled">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0,1,0">
             <property name="leftMargin">
              <number>0</number>
             </property>
